refactor work with roles in DataGenerator (minor fixes 3)